# threey

./: .gitignore  README.md  Taskfile.yml  example.py  package-lock.json  package.json  pyproject.toml
example-data/: data_segysak_license  data_segysak_urls.json  data_threey_license  open_data_new_zealand.json
js/: custom3dMess.json  js-colormaps.js  seismicSliceRenderData.js  uis3D.js  utils.js  widget.css  widget.js  widget_scatter_3d_viewer.js  widget_seismic_3d_viewer.js
src/threey/: __init__.py
