[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threey"
version = "0.0.0"
description = "Deep Learning for Structural and Stratigraphy"
readme = "README.md"
authors = [
    { name = "kelreeeeey", email = "kelreytaufiq08@mail.ugm.ac.id" },
]
requires-python = ">=3.11"
dependencies = [
  "anywidget",
  "marimo >= 0.14.7",
  "segfast >= 1.0.0",
  "zarr >= 3.1.0",
  "dask >= 2025.0.0",
  "matplotlib == 3.10.5",
  "seiscm == 0.1.1",
  "numpy==1.26.4",
]


# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/threey/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/threey/static/widget.js"]
skip-if-exists = ["src/threey/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"


[tool.marimo.runtime]
output_max_bytes = 50_000_000
